--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,11 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!-- <div id="monAppli">
+      Hello
+      <button id="btn">+</button>
+      <h1 id="counter">0</h1>
+    </div> -->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -40,4 +45,11 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <!-- <script>
+    document.getElementById("btn").addEventListener("click", () => {
+      console.log("Il a cliqué");
+      const counter = document.getElementById("counter");
+      counter.innerHTML = `${Number.parseInt(counter.innerHTML) + 1}`;
+    });
+  </script> -->
 </html>
